--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
                                 <input type="range" class="form-range" id="iloscRatRange" min="12" max="420" step="1" value="360">
                                 <div class="sub-info" id="lata">Ilość lat: 30</div>
                             </div>
-                            <div class="form-group" id="oprocentowanie">
-                                <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
+                            <div class="form-group">
+                                <label class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
+                                    <input type="number" class="form-control" id="oprocentowanie" step="0.1">
                                     <span class="input-group-text">%</span>
                                 </div>
-                                <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
+                                <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1">
                             </div>
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
