--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                                     <span class="input-group-text">zł</span>
                                 </div>
                                 <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="100" value="500000">
+                                <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000,00 zł</div>
                             </div>
                             <div class="form-group" id="iloscRatGroup">
                                 <label for="iloscRat" class="form-label">Ilość rat</label>
