--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                     <option value="rowne">Raty równe</option>
                                     <option value="malejace">Raty malejące</option>
                                 </select>
+                                <div class="sub-info" id="rodzajRatInfo">Wybierz równe lub malejące</div>
                             </div>
                             <!-- Prowizja -->
                             <div class="form-group" id="prowizjaGroup">
@@ -81,7 +82,7 @@
                                     </select>
                                 </div>
                                 <input type="range" class="form-range" id="prowizjaRange" min="0" max="25" step="0.1" value="2">
-                                <div class="sub-info" id="prowizjaInfo">Wartość: 10000 zł</div>
+                                <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
                         <!-- Nadpłata kredytu -->
