--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                             <div class="form-group" id="prowizjaGroup">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="prowizja" min="0" max="25" step="0.1" value="2">
+                                    <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.1" value="2">
                                     <select class="form-select jednostka-select" id="jednostkaProwizji">
                                         <option value="procent">%</option>
                                         <option value="pln">zł</option>
                                     </select>
                                 </div>
-                                <input type="range" class="form-range" id="prowizjaRange" min="0" max="25" step="0.1" value="2">
+                                <input type="range" class="form-range" id="prowizjaRange" min="0" max="1250000" step="0.1" value="2">
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
