--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
     <!-- Główny kontener formularza -->
     <div class="container">
         <div class="form-section" id="formSection">
+            <!-- Nowy checkbox "Porównaj Kredyt" -->
+            <div class="checkbox-row" style="justify-content: flex-end;">
+                <label class="checkbox-label" id="porownajKredytLabel">
+                    <input type="checkbox" id="porownajKredytBtn">
+                    <span class="checkbox-custom"></span>
+                    Porównaj Kredyt
+                </label>
+            </div>
+            <!-- Nagłówek -->
             <div class="header-row">
                 <h4>Finance Brothers</h4>
             </div>
