--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container">
         <div class="form-section" id="formSection">
             <!-- Nowy checkbox "Porównaj Kredyt" -->
-            <div class="checkbox-row" style="justify-content: flex-end;">
+            <div class="checkbox-row compare-credit-row">
                 <label class="checkbox-label" id="porownajKredytLabel">
                     <input type="checkbox" id="porownajKredytBtn">
                     <span class="checkbox-custom"></span>
