--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <!-- Nagłówek -->
             <div class="header-row">
-                <h4>Finance Brothers</h4>
+                <h4>Kalkulator Kredytu Hipotecznego</h4>
             </div>
             <div class="form-container">
                 <div class="form-wrapper">
