--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
-                        <!-- Przycisk oblicz -->
+                        <!-- Przyciski Oblicz i Reset -->
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki kredytu">Oblicz</button>
+                            <button type="button" class="btn btn-secondary" id="resetBtn" aria-label="Resetuj formularz">Reset</button>
                         </div>
                     </form>
                 </div>
