--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
     <!-- Responsywność -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kalkulator Kredytu Hipotecznego</title>
-    <!-- Zewnętrzne zależności Bootstrap i Google Fonts -->
+    <!-- Zewnętrzne zależności Bootstrap, Chart.js i Google Fonts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
     <!-- Lokalny plik CSS -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Kontener na logo i przyciski zoomu -->
+    <!-- Sekcja Logo -->
     <div class="logo-container">
         <img src="cropped-logo-FB-1.png" id="siteLogo" alt="Finance Brothers Logo" class="logo d-block mx-auto">
         <div class="zoom-controls">
@@ -22,10 +23,11 @@
             <button id="toggleDarkModeBtn" class="btn btn-sm" aria-label="Przełącz tryb ciemny">🌙</button>
         </div>
     </div>
-    <!-- Główny kontener formularza -->
+
+    <!-- Główny Kontener -->
     <div class="container">
+        <!-- Sekcja Formularza -->
         <div class="form-section" id="formSection">
-            <!-- Nowy checkbox "Porównaj Kredyt" -->
             <div class="checkbox-row compare-credit-row">
                 <label class="checkbox-label" id="porownajKredytLabel">
                     <input type="checkbox" id="porownajKredytBtn">
@@ -33,7 +35,6 @@
                     Porównaj Kredyt
                 </label>
             </div>
-            <!-- Nagłówek -->
             <div class="header-row">
                 <h4>Kalkulator Kredytu Hipotecznego</h4>
             </div>
@@ -71,7 +72,6 @@
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
-                            <!-- Rodzaj rat -->
                             <div class="form-group" id="rodzajRat">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
@@ -80,7 +80,6 @@
                                 </select>
                                 <div class="sub-info" id="rodzajRatInfo">Wybierz równe lub malejące</div>
                             </div>
-                            <!-- Prowizja -->
                             <div class="form-group" id="prowizjaGroup">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
@@ -122,17 +121,91 @@
                                 <button type="button" class="btn btn-secondary btn-sm" id="addVariableOprocentowanieBtn" aria-label="Dodaj kolejne zmienne oprocentowanie">Dodaj kolejną zmianę</button>
                             </div>
                         </div>
-                        <!-- Przyciski Oblicz i Reset -->
+                        <!-- Przycisk oblicz -->
                         <div class="form-row">
                             <button type="button" class="btn btn-primary" id="obliczBtn" aria-label="Oblicz wyniki kredytu">Oblicz</button>
-                            <button type="button" class="btn btn-secondary" id="resetBtn" aria-label="Resetuj formularz">Reset</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
+
+        <!-- Sekcja Wyników -->
+        <div class="result-section" id="resultSection" style="display: none;">
+            <div class="result-header">
+                <h4>Podsumowanie wyników</h4>
+                <button id="generatePdfBtn" class="btn btn-primary btn-sm">Generuj PDF</button>
+            </div>
+            <button class="btn btn-secondary mb-3" onclick="showForm()">Powrót do edycji</button>
+            <div class="result-container">
+                <div class="result-wrapper-chart">
+                    <div class="chart-container">
+                        <div class="chart">
+                            <canvas id="creditChart"></canvas>
+                        </div>
+                        <div class="chart-legend">
+                            <div class="legend-item" data-index="0">
+                                <div class="color-box" style="background-color: #28a745;" data-tooltip="Kapitał: -">
+                                    <span class="value" id="valueKapital">-</span>
+                                </div>
+                                <span class="legend-text">Kapitał</span>
+                            </div>
+                            <div class="legend-item" data-index="1">
+                                <div class="color-box" style="background-color: #007bff;" data-tooltip="Odsetki: -">
+                                    <span class="value" id="valueOdsetki">-</span>
+                                </div>
+                                <span class="legend-text">Odsetki</span>
+                            </div>
+                            <div class="legend-item" data-index="2">
+                                <div class="color-box" style="background-color: #dc3545;" data-tooltip="Nadpłaty: -">
+                                    <span class="value" id="valueNadplata">-</span>
+                                </div>
+                                <span class="legend-text">Nadpłaty</span>
+                            </div>
+                            <div class="legend-item" data-index="3">
+                                <div class="color-box" style="background-color: #6f42c1;" data-tooltip="Prowizja: -">
+                                    <span class="value" id="valueProwizja">-</span>
+                                </div>
+                                <span class="legend-text">Prowizja</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="summary-footer">
+                        <span class="highlight yellow" data-hover="360 miesięcy">Okres kredytowania: <span id="okresPoNadplacie">-</span> mc-y</span>
+                        <span class="highlight green" data-hover="">Całkowita kwota spłaty: <span id="koszt">-</span> zł</span>
+                    </div>
+                </div>
+            </div>
+            <!-- Sekcja Harmonogramu -->
+            <div class="harmonogram-container">
+                <div class="result-wrapper-harmonogram">
+                    <div class="harmonogram">
+                        <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
+                        <div id="harmonogramContent">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Miesiąc</th>
+                                        <th>Rata</th>
+                                        <th>Nadpłata</th>
+                                        <th>Kapitał</th>
+                                        <th>Odsetki</th>
+                                        <th>Pozostały kapitał</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="harmonogramTabela"></tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <!-- Zewnętrzne skrypty -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
+    <script src="https://unpkg.com/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
