--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
-                            <div class="form-group" id="rodzajRat">
+                            <div class="form-group">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
                                     <option value="rowne">Raty równe</option>
