--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                                     <tr>
                                         <th>Miesiąc</th>
                                         <th>Rata</th>
+                                        <th>Oproc.</th>
                                         <th>Nadpłata</th>
                                         <th>Kapitał</th>
                                         <th>Odsetki</th>
