--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                                         <th>Nadpłata</th>
                                         <th>Kapitał</th>
                                         <th>Odsetki</th>
-                                        <th>Pozostały kapitał</th>
+                                        <th>Kapitał do spłaty</th>
                                     </tr>
                                 </thead>
                                 <tbody id="harmonogramTabela"></tbody>
