--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
     <!-- Lokalny plik CSS -->
     <link rel="stylesheet" href="styles.css">
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <!-- Sekcja Logo -->
@@ -46,10 +48,10 @@
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="100" value="500000">
+                                    <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="0.01" value="500000">
                                     <span class="input-group-text">zł</span>
                                 </div>
-                                <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="100" value="500000">
+                                <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="0.01" value="500000">
                                 <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000,00 zł</div>
                             </div>
                             <div class="form-group" id="iloscRatGroup">
@@ -64,10 +66,10 @@
                             <div class="form-group">
                                 <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
+                                    <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.01" value="7">
                                     <span class="input-group-text">%</span>
                                 </div>
-                                <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
+                                <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.01" value="7">
                             </div>
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
@@ -83,13 +85,13 @@
                             <div class="form-group" id="prowizjaGroup">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.1" value="2">
+                                    <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.01" value="2">
                                     <select class="form-select jednostka-select" id="jednostkaProwizji">
                                         <option value="procent">%</option>
                                         <option value="pln">zł</option>
                                     </select>
                                 </div>
-                                <input type="range" class="form-range" id="prowizjaRange" min="0" max="1250000" step="0.1" value="2">
+                                <input type="range" class="form-range" id="prowizjaRange" min="0" max="1250000" step="0.01" value="2">
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
@@ -181,7 +183,7 @@
                 <div class="result-wrapper-harmonogram">
                     <div class="harmonogram">
                         <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
-                        <div id="harmonogramContent">
+                        <div id="harmonogramContent" style="display: none;">
                             <table class="table table-striped">
                                 <thead>
                                     <tr>
@@ -204,9 +206,9 @@
     </div>
 
     <!-- Zewnętrzne skrypty -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js"></script>
-    <script src="https://unpkg.com/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js"></script>
-    <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous" defer></script>
+    <script src="https://unpkg.com/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
+    <script src="https://unpkg.com/jspdf-autotable@3.8.2/dist/jspdf.plugin.autotable.min.js" defer></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
