--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="0.01" value="500000">
+                                    <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="1" value="500000">
                                     <span class="input-group-text">zł</span>
                                 </div>
-                                <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="0.01" value="500000">
-                                <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000,00 zł</div>
+                                <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="1" value="500000">
+                                <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000 zł</div>
                             </div>
                             <div class="form-group" id="iloscRatGroup">
                                 <label for="iloscRat" class="form-label">Ilość rat</label>
@@ -74,7 +74,7 @@
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
                         <div class="form-row">
-                            <div class="form-group">
+                            <div class "form-group">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
                                     <option value="rowne">Raty równe</option>
@@ -92,7 +92,7 @@
                                     </select>
                                 </div>
                                 <input type="range" class="form-range" id="prowizjaRange" min="0" max="1250000" step="0.01" value="2">
-                                <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
+                                <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000 zł</div>
                             </div>
                         </div>
                         <!-- Nadpłata kredytu -->
