--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <div class="form-wrapper">
                     <form id="obligacjeForm">
                         <!-- Pierwszy wiersz: Kwota kredytu, Ilość rat, Oprocentowanie -->
-                        <div class="form-row">
-                            <div class="form-group">
+                        <div class="form-row row">
+                            <div class="form-group col-md-4">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="1" value="500000">
@@ -54,16 +54,18 @@
                                 <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="1" value="500000">
                                 <div class="sub-info" id="kwotaInfo">Kwota kredytu: 500 000 zł</div>
                             </div>
-                            <div class="form-group" id="iloscRatGroup">
+                            <div class="form-group col-md-4" id="iloscRatGroup">
                                 <label for="iloscRat" class="form-label">Ilość rat</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" value="360">
+                                    <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" valueжем
+
+="360">
                                     <span class="input-group-text">mc-y</span>
                                 </div>
                                 <input type="range" class="form-range" id="iloscRatRange" min="12" max="420" step="1" value="360">
                                 <div class="sub-info" id="lata">Ilość lat: 30</div>
                             </div>
-                            <div class="form-group">
+                            <div class="form-group col-md-4">
                                 <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.01" value="7">
@@ -73,8 +75,8 @@
                             </div>
                         </div>
                         <!-- Drugi wiersz: Rodzaj rat, Prowizja -->
-                        <div class="form-row">
-                            <div class "form-group">
+                        <div class="form-row row">
+                            <div class="form-group col-md-6">
                                 <label for="rodzajRat" class="form-label">Rodzaj rat</label>
                                 <select class="form-select" id="rodzajRat">
                                     <option value="rowne">Raty równe</option>
@@ -82,7 +84,7 @@
                                 </select>
                                 <div class="sub-info" id="rodzajRatInfo">Wybierz równe lub malejące</div>
                             </div>
-                            <div class="form-group" id="prowizjaGroup">
+                            <div class="form-group col-md-6" id="prowizjaGroup">
                                 <label for="prowizja" class="form-label">Prowizja</label>
                                 <div class="input-group">
                                     <input type="number" class="form-control" id="prowizja" min="0" max="1250000" step="0.01" value="2">
