--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                             <div class="form-group col-md-4" id="iloscRatGroup">
                                 <label for="iloscRat" class="form-label">Ilość rat</label>
                                 <div class="input-group">
-                                    <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" valueжем
-
-="360">
+                                    <input type="number" class="form-control" id="iloscRat" min="12" max="420" step="1" value="360">
                                     <span class="input-group-text">mc-y</span>
                                 </div>
                                 <input type="range" class="form-range" id="iloscRatRange" min="12" max="420" step="1" value="360">
