--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.2/dist/chart.umd.min.js"></script>
     <!-- Lokalny plik CSS -->
     <link rel="stylesheet" href="styles.css">
-    <!-- Favicon 
-    <link rel="icon" type="image/png" href="favicon.png">-->
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <!-- Sekcja Logo -->
