--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             <div class="form-group">
                                 <label for="kwota" class="form-label">Kwota kredytu</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" id="kwota" min="50000" max="5000000" step="100" value="500000">
+                                    <input type="number" class="form-control" id="kwota" min="50000" max="5000000" step="100" value="500000">
                                     <span class="input-group-text">zł</span>
                                 </div>
                                 <input type="range" class="form-range" id="kwotaRange" min="50000" max="5000000" step="100" value="500000">
@@ -64,7 +64,7 @@
                             <div class="form-group">
                                 <label for="oprocentowanie" class="form-label">Oprocentowanie</label>
                                 <div class="input-group">
-                                    <input type="text" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
+                                    <input type="number" class="form-control" id="oprocentowanie" min="0.1" max="25" step="0.1" value="7">
                                     <span class="input-group-text">%</span>
                                 </div>
                                 <input type="range" class="form-range" id="oprocentowanieRange" min="0.1" max="25" step="0.1" value="7">
