--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
             <div class="harmonogram-container">
                 <div class="result-wrapper-harmonogram">
                     <div class="harmonogram">
-                        <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
+                        <div class="harmonogram-header">
+                            <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
+                        </div>
                         <div id="harmonogramContent">
                             <table class="table table-striped">
                                 <thead>
