--- a/index.html
+++ b/index.html
@@ -93,6 +93,16 @@
                                 <div class="sub-info" id="prowizjaInfo">Prowizja: 10 000,00 zł</div>
                             </div>
                         </div>
+                        <!-- Bezpieczny Kredyt 2% -->
+                        <div class="variable-rate-container" id="bezpiecznyKredytContainer">
+                            <div class="checkbox-row">
+                                <label class="checkbox-label" id="bezpiecznyKredytLabel">
+                                    <input type="checkbox" id="bezpiecznyKredytBtn">
+                                    <span class="checkbox-custom"></span>
+                                    Bezpieczny Kredyt 2%
+                                </label>
+                            </div>
+                        </div>
                         <!-- Nadpłata kredytu -->
                         <div class="variable-rate-container" id="nadplataKredytuContainer">
                             <div class="checkbox-row">
