--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                             <h5 class="btn-toggle" onclick="toggleHarmonogram('harmonogramContent')">Harmonogram spłat ▼</h5>
                         </div>
                         <div id="harmonogramContent">
-                            <table class="table table-striped">
+                            <table id="harmonogramTable" class="table table-striped">
                                 <thead>
                                     <tr>
                                         <th>Miesiąc</th>
